# board-game-simulator

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ctest.yml
include/game/: bounce.hpp  chinese_checkers.hpp  comparison.hpp  connect.hpp  hash.hpp  shape.hpp  tensor.hpp
src/: CMakeLists.txt  benchmark.cpp  foo.cpp
tests/: CMakeLists.txt  bounce.cpp  chinese_checkers.cpp  connect.cpp  hash.cpp  shape.cpp  tensor.cpp
